[package]
name = "openmls-wasm"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "OpenMLS WASM bindings for MLS encrypt/decrypt operations"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.100"
openmls = { version = "0.6", features = ["js"] }
openmls_traits = "0.3"
openmls_rust_crypto = "0.3"
openmls_basic_credential = "0.3"
tls_codec = { version = "0.4", features = ["derive"] }
console_error_panic_hook = { version = "0.1.7", optional = true }
js-sys = "0.3"
getrandom = { version = "0.2", features = ["js"] }
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
